Remove duplicated settings for examples (closes #10)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,52 +1,39 @@
-add_executable(bddmc)
-target_sources(bddmc PRIVATE bddmc.c getrss.c getrss.h)
-target_include_directories(bddmc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(bddmc PRIVATE Sylvan::Sylvan)
-target_compile_features(bddmc PRIVATE c_std_11 cxx_std_11)
-target_compile_options(bddmc PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+macro(set_compilation_settings NAME)
+    set_target_properties(${NAME} PROPERTIES COMPILE_OPTIONS "-Wno-unused")
+    target_compile_features(${NAME} PRIVATE c_std_11 cxx_std_11)
+    target_compile_options(${NAME} PRIVATE -Wall -Wextra -Werror -Wno-deprecated)  
+endmacro(set_compilation_settings)
 
-add_executable(lddmc)
-target_sources(lddmc PRIVATE lddmc.c getrss.c getrss.h)
-target_include_directories(lddmc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(lddmc PRIVATE Sylvan::Sylvan)
-target_compile_features(lddmc PRIVATE c_std_11 cxx_std_11)
-target_compile_options(lddmc PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+macro(add_example NAME SOURCE)
+    add_executable(${NAME} ${SOURCE})
+    target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+    target_link_libraries(${NAME} PRIVATE Sylvan::Sylvan)
+    set_compilation_settings(${NAME})
+endmacro(add_example)
 
-add_executable(ldd2bdd)
-target_sources(ldd2bdd PRIVATE ldd2bdd.c getrss.c getrss.h)
-target_include_directories(ldd2bdd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(ldd2bdd PRIVATE Sylvan::Sylvan)
-target_compile_features(ldd2bdd PRIVATE c_std_11 cxx_std_11)
-target_compile_options(ldd2bdd PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+add_example(bddmc bddmc.c)
+target_sources(bddmc PRIVATE getrss.c getrss.h)
 
-add_executable(nqueens)
-target_sources(nqueens PRIVATE nqueens.c)
-target_link_libraries(nqueens PRIVATE Sylvan::Sylvan)
-target_compile_features(nqueens PRIVATE c_std_11 cxx_std_11)
-target_compile_options(nqueens PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+add_example(lddmc lddmc.c)
+target_sources(lddmc PRIVATE getrss.c getrss.h)
 
-add_executable(simple)
-target_sources(simple PRIVATE simple.cpp)
-target_link_libraries(simple PRIVATE Sylvan::Sylvan)
-target_compile_features(simple PRIVATE c_std_11 cxx_std_11)
-target_compile_options(simple PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+add_example(ldd2bdd ldd2bdd.c)
+target_sources(ldd2bdd PRIVATE getrss.c getrss.h)
+
+add_example(nqueens nqueens.c)
+
+add_example(simple simple.cpp)
 
 # Check if we have Meddly
 find_library(MEDDLY_FOUND meddly)
 if(MEDDLY_FOUND)
-    add_executable(ldd2meddly)
-    target_sources(ldd2meddly PRIVATE ldd2meddly.cpp)
+    add_executable(ldd2meddly ldd2meddly.cpp)
     target_link_libraries(ldd2meddly PRIVATE Sylvan::Sylvan stdc++ meddly)
-    set_target_properties(ldd2meddly PROPERTIES COMPILE_OPTIONS "-Wno-unused")
-    target_compile_features(ldd2meddly PRIVATE c_std_11 cxx_std_11)
-    target_compile_options(ldd2meddly PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+    set_compilation_settings(ldd2meddly)
 
-    add_executable(medmc)
-    target_sources(medmc PRIVATE medmc.cpp)
+    add_executable(medmc medmc.cpp)
     target_link_libraries(medmc PRIVATE stdc++ meddly)
-    set_target_properties(medmc PROPERTIES COMPILE_OPTIONS "-Wno-unused")
-    target_compile_features(medmc PRIVATE c_std_11 cxx_std_11)
-    target_compile_options(medmc PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+    set_compilation_settings(medmc)
 endif()
 
 # Add profiler to some of the examples, if available
@@ -55,14 +42,14 @@ include(CheckIncludeFiles)
 check_include_files("gperftools/profiler.h" HAVE_PROFILER)
 
 if(HAVE_PROFILER)
-    set_target_properties(bddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
-    target_link_libraries(bddmc PRIVATE profiler)
+    macro(set_profiler_flag NAME)
+        set_target_properties(${NAME} PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
+        target_link_libraries(${NAME} PRIVATE profiler)
+    endmacro(set_profiler_flag)
 
-    set_target_properties(lddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
-    target_link_libraries(lddmc PRIVATE profiler)
-
-    set_target_properties(nqueens PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
-    target_link_libraries(nqueens PRIVATE profiler)
+    set_profiler_flag(bddmc)
+    set_profiler_flag(lddmc)
+    set_profiler_flag(nqueens)
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
