--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,20 +1,20 @@
 add_executable(bddmc)
 target_sources(bddmc PRIVATE bddmc.c getrss.c getrss.h)
-target_include_directories(bddmc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(bddmc PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(bddmc PRIVATE sylvan::sylvan)
 target_compile_features(bddmc PRIVATE c_std_11 cxx_std_11)
 target_compile_options(bddmc PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
 
 add_executable(lddmc)
 target_sources(lddmc PRIVATE lddmc.c getrss.c getrss.h)
-target_include_directories(lddmc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(lddmc PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(lddmc PRIVATE sylvan::sylvan)
 target_compile_features(lddmc PRIVATE c_std_11 cxx_std_11)
 target_compile_options(lddmc PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
 
 add_executable(ldd2bdd)
 target_sources(ldd2bdd PRIVATE ldd2bdd.c getrss.c getrss.h)
-target_include_directories(ldd2bdd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ldd2bdd PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(ldd2bdd PRIVATE sylvan::sylvan)
 target_compile_features(ldd2bdd PRIVATE c_std_11 cxx_std_11)
 target_compile_options(ldd2bdd PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
