added dynamic variable reordering

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,12 @@ target_sources(sylvan
     sylvan_bitmap.c
     roaring.c
     roaring.h
+    sylvan_mrc.c
+    sylvan_reorder_int.c
+    sylvan_varswap.c
+    sylvan_levels.c
+    sylvan_reorder.c
+    sylvan_interact.c
   PUBLIC
     sylvan.h
     sylvan_bdd.h
@@ -40,6 +46,12 @@ target_sources(sylvan
     sylvan_zdd_int.h
     libpopcnt.h
     sylvan_bitmap.h
+    sylvan_mrc.h
+    sylvan_reorder_int.h
+    sylvan_varswap.h
+    sylvan_levels.h
+    sylvan_reorder.h
+    sylvan_interact.h
 )
 
 set_target_properties(sylvan PROPERTIES VERSION ${sylvan_VERSION} SOVERSION ${sylvan_VERSION_MAJOR})
