--- a/src/sylvan.pc.in
+++ b/src/sylvan.pc.in
@@ -1,10 +1,9 @@
 libdir=@CMAKE_INSTALL_FULL_LIBDIR@
 includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
-Name: Sylvan
+Name: @PROJECT_NAME@
 Description: @PROJECT_DESCRIPTION@
-URL: @PROJECT_URL@
+URL: @PROJECT_HOMEPAGE_URL@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
-Libs: -L${libdir} -lsylvan -lgmp -lpthread -lm
-
+Libs: -L${libdir} -lsylvan -lpthread -llace @PKGC_LINK_GMP@
