--- a/src/sylvan.pc.in
+++ b/src/sylvan.pc.in
@@ -6,4 +6,5 @@ Description: @PROJECT_DESCRIPTION@
 URL: @PROJECT_HOMEPAGE_URL@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
-Libs: -L${libdir} -lsylvan -lpthread -llace @PKGC_LINK_GMP@
+Libs: -L${libdir} -lsylvan @PKGC_LINK_GMP@
+Requires: lace>=1.4.2
