--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,16 +25,15 @@ add_example(nqueens nqueens.c)
 add_example(simple simple.cpp)
 
 # Check if we have Meddly
-find_library(MEDDLY_FOUND meddly)
-if(MEDDLY_FOUND)
-    find_path(MEDDLY_INCLUDE_DIR "meddly.h")
+# find_library(MEDDLY_LIBRARY meddly)
+# find_path(MEDDLY_INCLUDE_DIR meddly/meddly.h)
+find_package(MEDDLY)
 
+if(MEDDLY_FOUND)
     add_example(ldd2meddly ldd2meddly.cpp)
-    target_link_libraries(ldd2meddly PRIVATE stdc++ ${MEDDLY_FOUND})
-    target_include_directories(ldd2meddly PRIVATE ${MEDDLY_INCLUDE_DIR})
+    target_link_libraries(ldd2meddly PRIVATE stdc++ MEDDLY::MEDDLY)
 
     add_example(medmc medmc.cpp)
-    target_link_libraries(medmc PRIVATE stdc++ ${MEDDLY_FOUND})
-    target_include_directories(medmc PRIVATE ${MEDDLY_INCLUDE_DIR})
+    target_link_libraries(medmc PRIVATE stdc++ MEDDLY::MEDDLY)
 endif()
 
